--- a/enc_kml_uplo.html
+++ b/enc_kml_uplo.html
@@ -15,20 +15,24 @@
 
   <style>
     :root {
-      --accent: #16a34a;
-      --accent-light: #bbf7d0;
-      --bg: #0b1120;
-      --card-bg: #020617;
-      --text: #e5e7eb;
-      --muted: #9ca3af;
-      --border: #1f2937;
+      --accent: #c62828;
+      --accent-2: #168f4b;
+      --accent-light: #fdecec;
+      --bg: #f9fbff;
+      --card-bg: #ffffff;
+      --text: #0f172a;
+      --muted: #64748b;
+      --border: #e2e8f0;
     }
 
     body {
       margin: 0;
       padding: 0;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background: radial-gradient(circle at top, #172554 0, #020617 45%, #000 100%);
+      background:
+        radial-gradient(circle at 10% 20%, rgba(198,40,40,0.08), transparent 32%),
+        radial-gradient(circle at 85% 10%, rgba(22,143,75,0.08), transparent 38%),
+        linear-gradient(180deg, #fdf7f4 0%, #f2f7ff 70%, #fdf7f4 100%);
       color: var(--text);
       min-height: 100vh;
       display: flex;
@@ -46,12 +50,11 @@
     }
 
     .card {
-      background: linear-gradient(135deg, rgba(22, 163, 74, 0.06), rgba(15, 23, 42, 0.95));
+      background: var(--card-bg);
       border-radius: 16px;
-      border: 1px solid rgba(148, 163, 184, 0.15);
-      box-shadow: 0 20px 40px rgba(0, 0, 0, 0.6);
+      border: 1px solid var(--border);
+      box-shadow: 0 18px 40px rgba(15,23,42,0.12);
       padding: 16px 18px;
-      backdrop-filter: blur(18px);
     }
 
     .header .title { display: flex; align-items: center; gap: 10px; }
@@ -59,7 +62,7 @@
       content: '';
       width:10px;
       height:10px;
-      background: linear-gradient(45deg,#22c55e,#16a34a);
+      background: linear-gradient(45deg,#d9b24c,#a37e20);
       border-radius:3px;
       display:inline-block;
     }
@@ -68,8 +71,8 @@
     .form-row label { width: 120px; min-width: 90px; }
     .form-row input[type="text"] { max-width: 260px; }
 
-    .btn-action { background: linear-gradient(135deg,#10b981,#059669); color: #052014; }
-    .btn-secondary { background: transparent; color: var(--muted); border: 1px solid rgba(148,163,184,0.18); }
+    .btn-action { background: linear-gradient(135deg,#d9b24c,#987417); color: #fff; }
+    .btn-secondary { background: #fff; color: var(--muted); border: 1px solid var(--border); box-shadow:none; }
     .form-row button {
       display: inline-flex;
       align-items: center;
@@ -86,9 +89,9 @@
       display: inline-flex;
       align-items: center;
       justify-content: center;
-      color: inherit;
+      color: #000000;
     }
-    .btn-icon svg { width: 100%; height: 100%; }
+    .btn-icon svg { width: 100%; height: 100%; stroke: currentColor; }
 
     .card[style] { padding: 12px; }
     #map { border-radius: 12px; border: 1px solid rgba(255,255,255,0.03); }
@@ -108,7 +111,7 @@
       font-weight: 600;
       letter-spacing: 0.04em;
       text-transform: uppercase;
-      color: var(--accent-light);
+      color: #040404;
     }
 
     .subtitle {
@@ -125,8 +128,8 @@
     }
 
     label {
-      font-size: 0.8rem;
-      color: var(--muted);
+      font-size: 1rem;
+      color: #212529;
     }
 
     input[type="text"] {
@@ -136,7 +139,7 @@
       border-radius: 999px;
       border: 1px solid rgba(148, 163, 184, 0.4);
       font-size: 0.9rem;
-      background: rgba(15, 23, 42, 0.95);
+      background: rgba(255, 255, 255, 0.95);
       color: var(--text);
       outline: none;
     }
@@ -156,9 +159,9 @@
       display: inline-flex;
       align-items: center;
       gap: 6px;
-      background: linear-gradient(135deg, #22c55e, #16a34a);
-      color: #022c22;
-      box-shadow: 0 10px 25px rgba(21, 128, 61, 0.4);
+      background: linear-gradient(135deg, #c62828, #ef5350);
+      color: #fff;
+      box-shadow: 0 12px 25px rgba(198, 40, 40, 0.3);
       transition: transform 0.08s ease, box-shadow 0.08s ease, filter 0.1s ease;
     }
 
@@ -170,7 +173,7 @@
 
     button:active {
       transform: translateY(0);
-      box-shadow: 0 8px 18px rgba(22, 163, 74, 0.3);
+      box-shadow: 0 8px 18px linear-gradient(135deg, #d9b24c, #a48942);
     }
 
     button:disabled {
@@ -181,15 +184,15 @@
     }
 
     .btn-secondary {
-      background: transparent;
-      color: var(--muted);
-      border: 1px solid rgba(148, 163, 184, 0.4);
+      background: #fff;
+      color: #090a0c;
+      border: 1px solid var(--border);
       box-shadow: none;
     }
 
     .btn-secondary:hover {
-      background: rgba(15, 23, 42, 0.9);
-      box-shadow: 0 8px 20px rgba(15, 23, 42, 0.7);
+      background: rgba(0, 0, 0, 0.06);
+      box-shadow: 0 8px 20px rgba(198, 40, 40, 0.16);
     }
 
     #message {
@@ -199,20 +202,21 @@
     }
 
     #message.success {
-      color: #bbf7d0;
+      color: var(--accent);
     }
 
     #message.error {
-      color: #fecaca;
+      color: #c62828;
     }
 
     #map {
       width: 100%;
-      height: calc(100vh - 180px);
+      height: calc(100vh - 200px);
       min-height: 360px;
-      border-radius: 16px;
+      border-radius: 14px;
       overflow: hidden;
-      border: 1px solid rgba(148, 163, 184, 0.15);
+      border: 1px solid var(--border);
+      background:#fff;
     }
 
     .map-footer {
@@ -229,16 +233,17 @@
     .tabs {
       display: inline-flex;
       gap: 6px;
-      background: rgba(15, 23, 42, 0.95);
+      background: #f7fafc;
       border-radius: 999px;
       padding: 4px;
       margin-bottom: 8px;
+      border:1px solid var(--border);
     }
 
     .tab-button {
       border-radius: 999px;
       border: none;
-      padding: 4px 12px;
+      padding: 6px 12px;
       font-size: 0.8rem;
       cursor: pointer;
       background: transparent;
@@ -247,12 +252,13 @@
       display: inline-flex;
       align-items: center;
       gap: 4px;
-      transition: background 0.12s ease, color 0.12s ease;
+      transition: background 0.12s ease, color 0.12s ease, box-shadow 0.12s ease;
     }
 
     .tab-button.tab-active {
-      background: linear-gradient(135deg, #22c55e, #16a34a);
-      color: #022c22;
+      background: linear-gradient(135deg, #8d722a, #8d722a);
+      color: #fff;
+      box-shadow:0 10px 20px rgba(198,40,40,0.22);
     }
 
     .tab-content {
@@ -265,11 +271,11 @@
 
     #pdfFrame {
       width: 100%;
-      height: calc(100vh - 210px);
+      height: calc(100vh - 230px);
       min-height: 360px;
-      border-radius: 16px;
-      border: 1px solid rgba(148, 163, 184, 0.15);
-      background: #020617;
+      border-radius: 14px;
+      border: 1px solid var(--border);
+      background: #fff;
     }
 
     #pdfPlaceholder {
@@ -302,34 +308,33 @@
           <div class="subtitle">Digite o número da OS para carregar o desenho da área e a prévia em PDF diretamente do Google Drive.</div>
         </div>
         <div class="header-actions">
-          <button type="button" class="btn-secondary" onclick="window.location.href='index.html'">
-            <i class="btn-icon" data-lucide="arrow-left"></i>
-            <span class="btn-label">Voltar</span>
+
+            
           </button>
         </div>
       </div>
 
       <div class="form-row">
-        <label for="osInput">Número da OS</label>
+        <label for="osInput">Número da OS:</label>
         <input type="text" id="osInput" placeholder="Ex: 710987" />
         <button id="btnBuscar" type="button" class="btn-action">
-          <i class="btn-icon" data-lucide="search"></i>
+          <span class="btn-icon" aria-hidden="true"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg></span>
           <span class="btn-label">Buscar OS</span>
         </button>
         <button id="btnLimpar" type="button" class="btn-secondary">
-          <i class="btn-icon" data-lucide="trash-2"></i>
+          <span class="btn-icon" aria-hidden="true"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"></path><path d="M10 11v6"></path><path d="M14 11v6"></path><path d="M9 6V4a1 1 0 0 1 1-1h4a1 1 0 0 1 1 1v2"></path></svg></span>
           <span class="btn-label">Limpar</span>
         </button>
         <button id="btnDownload" type="button" class="btn-secondary" disabled>
-          <i class="btn-icon" data-lucide="download-cloud"></i>
+          <span class="btn-icon" aria-hidden="true"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M8 17l4 4 4-4"></path><path d="M12 12v9"></path><path d="M20.88 18.09A4 4 0 0 0 18 10h-1.26A8 8 0 1 0 3 16"></path></svg></span>
           <span class="btn-label">Baixar KML</span>
         </button>
         <button id="btnNavigate" type="button" class="btn-secondary" disabled>
-          <i class="btn-icon" data-lucide="navigation-2"></i>
+          <span class="btn-icon" aria-hidden="true"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polygon points="3 11 22 2 13 21 11 13 3 11"></polygon></svg></span>
           <span class="btn-label">Navegar até área</span>
         </button>
         <button id="btnLocate" type="button" class="btn-secondary">
-          <i class="btn-icon" data-lucide="map-pin"></i>
+          <span class="btn-icon" aria-hidden="true"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 10c0 7-9 13-9 13S3 17 3 10a9 9 0 0 1 18 0z"></path><circle cx="12" cy="10" r="3"></circle></svg></span>
           <span class="btn-label">Minha posição</span>
         </button>
       </div>
