--- a/painel_admin.html
+++ b/painel_admin.html
@@ -457,7 +457,7 @@
             <i class="nav-icon chevron" data-lucide="chevron-down"></i>
           </button>
           <div class="nav-sub" data-group="kml">
-            <button class="nav-link" data-src="UploadKml.html" data-label="Página de Upload">
+            <button class="nav-link" data-src="upload.kml.html" data-label="Página de Upload">
               <i class="nav-icon" data-lucide="upload-cloud"></i>
               <span class="label">Página de Upload</span>
             </button>
@@ -572,8 +572,8 @@
         <section class="card iframe-wrap" id="framePanel">
           <div style="display:flex;justify-content:space-between;align-items:center;gap:10px;flex-wrap:wrap;">
             <div>
-              <div id="frameTitle" style="font-weight:800;">Conteúdo</div>
-              <div style="color:var(--muted);" id="frameHint">Clique em um item do menu para abrir aqui ao lado.</div>
+              <div id="frameTitle" style="font-weight:800;color: #e3af2b;">Conteúdo</div>
+              <div style="color: #ba9942;" id="frameHint">Clique em um item do menu para abrir aqui ao lado.</div>
             </div>
             <div class="chip" id="frameChip"></div>
           </div>
