--- a/gerar_planos_voo.html
+++ b/gerar_planos_voo.html
@@ -102,7 +102,7 @@
             <div class="muted" style="font-size:.8rem;">Clique no mapa ou marque na lista</div>
           </div>
           <div style="display:flex; gap:.4rem; align-items:center;">
-            <div class="pill"><span id="countSelected">0</span> selecionados</div>
+            <div class="pill"><span id="countSelected">0</span> select</div>
             <div class="pill"><span id="haSelected">0.00</span> ha</div>
           </div>
         </header>
